--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "target": "ES2017",
+    "types": ["node"]
   },
   "include": [
     "next-env.d.ts",
